[gd_scene load_steps=23 format=3 uid="uid://whn2wd2dt6du"]

[ext_resource type="Script" path="res://scenes/zombie.gd" id="1_n0ef4"]
[ext_resource type="Texture2D" uid="uid://dujl3ym4k0g12" path="res://assets/Apocalypse Character Pack/Zombie/Idle.png" id="2_gau4c"]
[ext_resource type="Texture2D" uid="uid://dykdyil8glvr6" path="res://assets/Apocalypse Character Pack/Zombie/Walk.png" id="3_4fp8v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8n3rc"]
size = Vector2(14, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8eqb"]
atlas = ExtResource("2_gau4c")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vpiq"]
atlas = ExtResource("2_gau4c")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khwln"]
atlas = ExtResource("2_gau4c")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_847dx"]
atlas = ExtResource("2_gau4c")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vklfg"]
atlas = ExtResource("2_gau4c")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxvqb"]
atlas = ExtResource("3_4fp8v")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrv1a"]
atlas = ExtResource("3_4fp8v")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn3ut"]
atlas = ExtResource("3_4fp8v")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ribu"]
atlas = ExtResource("3_4fp8v")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp5il"]
atlas = ExtResource("3_4fp8v")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdpum"]
atlas = ExtResource("3_4fp8v")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_867b6"]
atlas = ExtResource("3_4fp8v")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b40yf"]
atlas = ExtResource("3_4fp8v")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcssr"]
atlas = ExtResource("3_4fp8v")
region = Rect2(256, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3jdy"]
atlas = ExtResource("3_4fp8v")
region = Rect2(288, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hgby3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8eqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vpiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khwln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_847dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vklfg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxvqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrv1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn3ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ribu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp5il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdpum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_867b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b40yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcssr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3jdy")
}],
"loop": true,
"name": &"move",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ourfn"]
radius = 201.01

[sub_resource type="CircleShape2D" id="CircleShape2D_r3f21"]
radius = 372.034

[node name="Zombie" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent")]
position = Vector2(337, 176)
collision_mask = 7
script = ExtResource("1_n0ef4")
nav_agent = NodePath("Navigation/NavigationAgent2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_8n3rc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hgby3")
animation = &"move"
frame_progress = 0.28732

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
debug_enabled = true

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[node name="Aggro" type="Node2D" parent="."]

[node name="AggroRange" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/AggroRange"]
shape = SubResource("CircleShape2D_ourfn")

[node name="DeaggroRange" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/DeaggroRange"]
shape = SubResource("CircleShape2D_r3f21")

[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="Aggro/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="body_entered" from="Aggro/AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="area_exited" from="Aggro/DeaggroRange" to="." method="_on_deaggro_range_area_exited"]
[connection signal="body_exited" from="Aggro/DeaggroRange" to="." method="_on_deaggro_range_body_exited"]
